--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-matplotlib==3.1.3
 numpy==1.20.1
-scikit-learn==0.22.1
-scipy==1.6.1
-seaborn==0.11.1
-torch==1.8.0
+torch>=1.8.0
 torchdiffeq==0.2.1
